kubernetes/ingress/hugo-ingress-notls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hugo
spec:
  rules:
  - host: barefootdevops.com
    http:
      paths:
      - path: /
        backend:
          serviceName: hugo
          servicePort: 80
