kubernetes/ingress/hugo-ingress-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hugo
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - hosts:
    - barefootdevops.com
    secretName: hugo-tls
  rules:
  - host: barefootdevops.com
    http:
      paths:
      - path: /
        backend:
          serviceName: hugo
          servicePort: 80
